--- a/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj.filters
+++ b/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Algoritms\Lib\FWMFuncs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Algoritms\CBMFuncs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Inspect_Testing.cpp">
@@ -132,6 +135,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Algoritms\Inspect_Call.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Algoritms\CBMFuncs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
