--- a/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj
+++ b/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj
@@ -324,6 +324,7 @@ copy Algoritms\FWMFuncs.h Algoritms\Lib\ /y</Command>
     <ClInclude Include="Algoritms\OpenShort.h" />
     <ClInclude Include="Algoritms\Our_Algorithms.h" />
     <ClInclude Include="Algoritms\PinholeIsland.h" />
+    <ClInclude Include="Algoritms\Slice.h" />
     <ClInclude Include="Algoritms\TSQueueSM.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="CParams_Dialog.h" />
@@ -336,7 +337,6 @@ copy Algoritms\FWMFuncs.h Algoritms\Lib\ /y</Command>
     <ClInclude Include="Inspect_Testing.h" />
     <ClInclude Include="Inspect_TestingDlg.h" />
     <ClInclude Include="Algoritms\Lib\Open_Short_2.h" />
-    <ClInclude Include="Algoritms\Lib\Slice.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -389,6 +389,9 @@ copy Algoritms\FWMFuncs.h Algoritms\Lib\ /y</Command>
     <ClCompile Include="Algoritms\PinholeIsland.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug_DLL|x64'">NotUsing</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="Algoritms\Slice.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Common.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
