--- a/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj.filters
+++ b/Inspect_Testing/Inspect_Testing/Inspect_Testing.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClInclude Include="Algoritms\Lib\Open_Short_2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Algoritms\Lib\Slice.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Algoritms\Lib\CParams.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -88,6 +85,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Algoritms\CBMFuncs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Algoritms\Slice.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -138,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Algoritms\CBMFuncs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Algoritms\Slice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
